Set minimum version for plugin to Java 17